# xgenProxyTranslator

./: AExgenProxyTemplate.mel  CMakeLists.txt  README.md  sequencer_example_models.py  xgenProxy.py  xgenProxyTranslator.cpp  xgenProxyTranslator.h  xgenProxyTranslator.py
modules/: FindAlembic.cmake  FindArnold.cmake  FindMaya.cmake  FindMtoA.cmake  FindTbb.cmake  FindXgen.cmake  GetPython.cmake
